--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%highlight(%-5level)] [%cyan(%thread)] %magenta(%logger{15}) - %msg%n
 spring.mail.host=smtp.gmail.com
-spring.mail.username=pruebaintegrador04@gmail.com
+spring.mail.username=lifipa76@gmail.com
 spring.threads.virtual.enabled=true
-spring.mail.password=ivpt drde zjfg bfmx
+spring.mail.password=fxfk dcli vtix dywm
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
